# dpdumperlib

./: CHANGELOG.md  README.md  pyproject.toml
dpdumperlib/ic/: ic_definition.py  ic_loader.py  ic_types.py
dpdumperlib/io/: file_utils.py
examples/: 2532_pod.toml  27256_pod.toml  2732_pod.toml  27512_pod.toml  27C1001_pod.toml  DS1644_pod.toml  MK48Z08_pod.toml
tests/: conftest.py  test_file_utils.py  test_ic_definition.py
