[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dpdumperlib"
version = "0.0.3"
description = "Library with some utility code for the dpdumper tool"
authors = [
   { name = "Fabio Battaglia", email = "hkzlabnet@gmail.com" }
]
keywords = ["dupico", "DuPAL", "dumping"]
readme = "README.md"
license = { text = "CC BY-SA 4.0 DEED" }
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = [
    "dpdumperlib",
    "dpdumperlib.ic",
    "dpdumperlib.io"
 ]
py-modules = [ "__init__" ]

[project.urls]
repository = "https://github.com/DuPAL-PAL-DUmper/dpdumperlib"